# skills-introduction-to-github

./: .env.example  .gitignore  CNAME  Dockerfile  FNID_Area3_Operational_Workbook.xlsx  README.md  START_BOT.bat  about.html  backtester.py  calibration_results.json  calibrator.py  claw_claw_full.py  config.py  contact.html  credentials.json.example  data_generator.py  disclosure.html  docker-compose.yml  fnid_data_import.py  fnid_portal_system.py  generate_fnid_workbook.py  generate_fnid_workbook_v2.py  gunicorn.conf.py  index.html  launch.ps1  launch.sh  live_trader.py  main.py  mt5_connector.py  mt5_straddle_bot.py  patch_dashboards.py  patch_remaining.py  patch_sop_batch1.py  patch_sop_batch2.py  patch_workbook.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_bot.py  (+10 more)
CLAWBOT/: main.py  requirements.txt
bot/: .env.example  README.md  affiliate_api.py  config.py  database.py  earnings.py  main.py  notifier.py  requirements.txt  sample_watchlist.txt  scraper.py  telegram_bot.py  tracker.py  x_poster.py
categories/: audio.html  chatbots.html  coding.html  design.html  image.html  marketing.html  productivity.html  video.html  writing.html
claw_claw/: __init__.py  audit_db.py  config.json  data_feed.py  execution.py  logger.py  main.py  mt5_connector.py  risk_manager.py  state.py  symbol_resolver.py  trade_monitor.py  utils.py
css/: style.css
fnid_portal/: __init__.py  auth.py  bot.py  case_numbers.py  config.py  constants.py  deadlines.py  models.py  rbac.py  seed.py  workbook.py  workflow.py
fnid_web/: .gitignore  app.py  config.py  models.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+457 files in other folders)
