[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnid-portal"
version = "1.0.0"
description = "FNID Area 3 Operational Portal - Jamaica Constabulary Force"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "Flask>=3.0,<4.0",
    "gunicorn>=22.0,<23.0",
    "openpyxl>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
